--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <title>Document title</title>
+    <title>Express Palindrome</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:ital@0;1&display=swap"
       rel="stylesheet"
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
 <body>
-	<h1>Is it A Palindrom?</h1>
+	<h1>Is it A Palindrome?</h1>
 
 
  <input type="text" placeholder="Enter Name" id="word"> <button id="button"> check </button>
@@ -25,9 +25,10 @@
   <h1>Previous Results</h1>
   
   <% for(var i=0; i<result.length; i++) {%>
-    <p><span>word: <%= result[i].word %>  - result: <%= result[i].result %></span><button id="deletebtn" data-id="<%= result[i].id %>">Delete</button>  
+    <div>
+    <p><span><%= result[i].word %>: <%= result[i].result %></span><button id="deletebtn" data-id="<%= result[i].id %>">Delete</button>  
     </p>
-   
+  </div>
   <% } %>
  
 
